# receipt_processor

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: celery_worker.py  db_redis.py  main.py  receipt.py  scoring.py  tasks.py  test_scoring.py
tests/: test_api.py
