[tool.poetry]
name = "receipt_processor"
version = "1.0.0"
description = ""
authors = ["Filipe Silvestre"]
readme = ""

[tool.poetry.dependencies]
python = "=3.11.4"
uvicorn = "=0.27.1"
fastapi = "=0.110.0"
celery = {extras = ["redis"], version = "=5.3.6"}
redis = "=5.0.2"
python-dotenv = "=1.0.1"
flower = "=2.0.1"

[tool.poetry.group.test.dependencies]  
hypothesis = "6.127.6"  
pytest = "^8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
